add PHP Class and function

--- a/index.html
+++ b/index.html
@@ -161,9 +161,14 @@
     <div class="row">
       <div class="col-md-6 col-md-offset-3">
         <h3>Assignment #5</h3>
-        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-        tempor incididunt ut labore et dolore magna aliqua. Describe the assignment here.</p>
-        <a href="week6lab/index.html" class="btn btn-default">
+        <p>Week6:<br>
+          <ol>
+            <li>manage Session;</li>
+            <li>Insert Cookie;</li>
+            <li>apply Filter;</li>
+            <li>File upload;</li>
+          </ol></p>
+        <a href="week6lab/index.php" class="btn btn-default">
           <span class="glyphicon glyphicon-zoom-in"></span> View
         </a>
       </div>
