--- a/index.html
+++ b/index.html
@@ -179,14 +179,13 @@
     <div class="row">
       <div class="col-md-6 col-md-offset-3">
         <h3>Assignment #6</h3>
-        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-        tempor incididunt ut labore et dolore magna aliqua. Describe the assignment here.</p>
+        <p>CSS</p>
         <a href="week7lab/index.html" class="btn btn-default">
           <span class="glyphicon glyphicon-zoom-in"></span> View
         </a>
       </div>
     </div>
- 
+
 </div>
  
 
