add week7 code igniter base

--- a/index.html
+++ b/index.html
@@ -178,7 +178,7 @@
     <!-- Assignment#2 -->
     <div class="row">
       <div class="col-md-6 col-md-offset-3">
-        <h3>Assignment #6</h3>
+        <h3>week9</h3>
         <p>CSS</p>
         <a href="week7lab/index.html" class="btn btn-default">
           <span class="glyphicon glyphicon-zoom-in"></span> View
