sort profile lab link ,and rewrite profile content,and add week 10 lab

--- a/index.html
+++ b/index.html
@@ -110,8 +110,12 @@
     <!-- Assignment#1 -->
     <div class="row">
       <div class="col-md-6 col-md-offset-3">
-        <h3>Assignment #1</h3>
-        <p>My task is to create a HTML form for the UKM’s Student Web Hosting Registration. This form allows student to register for a web space in the UKM web server.</p>
+        <h3>Week2</h3>
+        <p>Basic HTML</p>
+        <ol>
+          <li>Create Profile</li>
+          <li>Insert image,link</li>
+        </ol>
         <a href="week2lab/index.html" class="btn btn-default">
           <span class="glyphicon glyphicon-zoom-in"></span> View
         </a>
@@ -121,9 +125,12 @@
     <!-- Assignment#2 -->
     <div class="row">
       <div class="col-md-6 col-md-offset-3">
-        <h3>Assignment #2</h3>
-        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-        tempor incididunt ut labore et dolore magna aliqua. Describe the assignment here.</p>
+        <h3>Week 3</h3>
+        <p>Form</p>
+        <ol>
+            <li>Create form</li>
+            <li>submit complete form</li>
+        </ol>
         <a href="week3lab/index.html" class="btn btn-default">
           <span class="glyphicon glyphicon-zoom-in"></span> View
         </a>
@@ -134,41 +141,59 @@
     <!-- Assignment#2 -->
     <div class="row">
       <div class="col-md-6 col-md-offset-3">
-        <h3>Assignment #3</h3>
-        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-        tempor incididunt ut labore et dolore magna aliqua. Describe the assignment here.</p>
+        <h3>Week 4</h3>
+        <p>Process Form data</p>
+        <ol>
+          <li>submit form via POST</li>
+          <li>validate form</li>
+        </ol>
         <a href="week4lab/index.html" class="btn btn-default">
           <span class="glyphicon glyphicon-zoom-in"></span> View
         </a>
       </div>
     </div>
 
-
     <!-- Assignment#2 -->
     <div class="row">
       <div class="col-md-6 col-md-offset-3">
-        <h3>Assignment #4</h3>
-        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-        tempor incididunt ut labore et dolore magna aliqua. Describe the assignment here.</p>
+        <h3>Week5</h3>
+        <p>Advance PHP</p>
+        <ol>
+            <li>Manage session</li>
+            <li>Insert Cookie;</li>
+            <li>Filter variable</li>
+        </ol>
         <a href="week5lab/index.html" class="btn btn-default">
           <span class="glyphicon glyphicon-zoom-in"></span> View
         </a>
       </div>
     </div>
 
+ <!-- Assignment#2 -->
+    <div class="row">
+      <div class="col-md-6 col-md-offset-3">
+        <h3>Week6</h3>
+        <p>Connect to MariaDB</p>
+        <ol>
+            <li>Create connection to server</li>
+            <li>CRUD operation</li>
+        </ol>
+        <a href="week6lab/index.php" class="btn btn-default">
+          <span class="glyphicon glyphicon-zoom-in"></span> View
+        </a>
+      </div>
+    </div>
 
     <!-- Assignment#2 -->
     <div class="row">
       <div class="col-md-6 col-md-offset-3">
-        <h3>Assignment #5</h3>
-        <p>Week6:<br>
+        <h3>Week7</h3>
+        <p>Codeigniter<br>
           <ol>
-            <li>manage Session;</li>
-            <li>Insert Cookie;</li>
-            <li>apply Filter;</li>
-            <li>File upload;</li>
+            <li>Use codeigniter as base model</li>
+            <li>Create Class function </li>
           </ol></p>
-        <a href="week6lab/index.php" class="btn btn-default">
+        <a href="week7lab/myguestbook/" class="btn btn-default">
           <span class="glyphicon glyphicon-zoom-in"></span> View
         </a>
       </div>
@@ -180,7 +205,11 @@
       <div class="col-md-6 col-md-offset-3">
         <h3>week9</h3>
         <p>CSS</p>
-        <a href="week7lab/index.html" class="btn btn-default">
+        <ol>
+            <li>change page style</li>
+            <li>refer to external CSS file</li>
+        </ol>
+        <a href="week9lab/bio_form.php" class="btn btn-default">
           <span class="glyphicon glyphicon-zoom-in"></span> View
         </a>
       </div>
@@ -224,7 +253,7 @@
 
  <!-- Footer -->
 <footer class="container-fluid bg-primary text-center">
-  <p><a href="copyright.html" target="_tab">Uncopyrighted</a> by Yuntian Wu. Last changed on 16/11/24.</p>
+  <p>Written  by Yuntian Wu. Last changed on 17/12/24.</p>
 </footer>
  
 </body>
