--- a/week4lab/index.html
+++ b/week4lab/index.html
@@ -4,6 +4,7 @@
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<title>week4lab index</title>
+	<link rel="stylesheet" type="text/css" href="github_styles.css">
 </head>
 <body>
 	<h2 style="text-align: center;font-family:Verdana;font-size: 32px;">Week4 Index</h2>
