add week12 lab , yet unfinished

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 <body>
  
 <!-- header -->
-<div class="container-fluid bg-success text-center">
+<div id="me" class="container-fluid bg-success text-center">
   <h2 class="margin">TP2543 Week Labs</h2>
   <img src="img/rain.jpg" width="224" height="224" class="img-responsive img-circle margin" style="display:inline">
   <h3>A197547 - Yuntian Wu</h3>
@@ -108,7 +108,7 @@
   <h2 class="margin">Assignment</h2>
    
     <!-- Assignment#1 -->
-    <div class="row">
+    <div id="week2" class="row">
       <div class="col-md-6 col-md-offset-3">
         <h3>Week2</h3>
         <p>Basic HTML</p>
@@ -123,7 +123,7 @@
     </div>
  
     <!-- Assignment#2 -->
-    <div class="row">
+    <div id="week3" class="row">
       <div class="col-md-6 col-md-offset-3">
         <h3>Week 3</h3>
         <p>Form</p>
@@ -139,7 +139,7 @@
 
 
     <!-- Assignment#2 -->
-    <div class="row">
+    <div id="week4" class="row">
       <div class="col-md-6 col-md-offset-3">
         <h3>Week 4</h3>
         <p>Process Form data</p>
@@ -154,7 +154,7 @@
     </div>
 
     <!-- Assignment#2 -->
-    <div class="row">
+    <div id="week5" class="row">
       <div class="col-md-6 col-md-offset-3">
         <h3>Week5</h3>
         <p>Advance PHP</p>
@@ -170,7 +170,7 @@
     </div>
 
  <!-- Assignment#2 -->
-    <div class="row">
+    <div id="week6" class="row">
       <div class="col-md-6 col-md-offset-3">
         <h3>Week6</h3>
         <p>Connect to MariaDB</p>
@@ -185,7 +185,7 @@
     </div>
 
     <!-- Assignment#2 -->
-    <div class="row">
+    <div id="week7" class="row">
       <div class="col-md-6 col-md-offset-3">
         <h3>Week7</h3>
         <p>Codeigniter<br>
@@ -201,7 +201,7 @@
 
 
     <!-- Assignment#7-->
-    <div class="row">
+    <div id="week9" class="row">
       <div class="col-md-6 col-md-offset-3">
         <h3>week9</h3>
         <p>CSS</p>
@@ -216,7 +216,7 @@
     </div>
 
    <!-- Assignment#8-->
-    <div class="row">
+    <div id="week10" class="row">
       <div class="col-md-6 col-md-offset-3">
         <h3>week10</h3>
         <p>Boostrap</p>
@@ -230,8 +230,8 @@
       </div>
     </div>
     
-  <!-- Assignment#8-->
-      <div class="row">
+  <!-- Assignment#9-->
+      <div id="week11" class="row">
         <div class="col-md-6 col-md-offset-3">
           <h3>week11</h3>
           <p>JavaScript</p>
@@ -239,7 +239,7 @@
               <li>Add functoin to event</li>
               <li>interact with user</li>
           </ol>
-          <a href="week11lab/form.html" class="btn btn-default">
+          <a href="week11lab" class="btn btn-default">
             <span class="glyphicon glyphicon-zoom-in"></span> View
           </a>
         </div>
