--- a/lecturecodes/12-ajax/5-jquery_get.html
+++ b/lecturecodes/12-ajax/5-jquery_get.html
@@ -9,8 +9,8 @@ $(document).ready(function(){
             if(status == "success")
                 $("#output").html(data);
                 alert("External content loaded successfully!");
-            if(status == "error")
-                alert("Error: " + xhr.status + ": " + xhr.statusText);        	
+                alert("Error: " + xhr.s
+            if(status == "error")tatus + ": " + xhr.statusText);        	
         });
     });
 });
