--- a/week12lab/task4.html
+++ b/week12lab/task4.html
@@ -21,22 +21,20 @@
 <script  src="https://code.jquery.com/jquery-3.5.1.min.js" integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
 <link href='https://fonts.googleapis.com/css?family=Comfortaa' rel='stylesheet'>
 <script type="text/javascript">jQuery(document).ready(function($) {
-    $("input").on({
-      focusin:function() {
-      /* Act on the event */
-      $(this).css({
-    "background-color": "lightsteelblue",
-      })
+  $("form button").on({
+    click:function(){
+      window.alert("onclick");
     },
-      focusout:function() {
-        /* Act on the event */
+      mouseenter:function(){
+        $(this).css({"background-color":"black","color":"white"});
+      },
+      mouseleave:function(){
         $(this).css({
-    "background-color": "white",
-      })
+          "all":"revert"
+        });
       }
-    });
-});
-</script>
+  });
+});</script>
 </head>
 <body>
   <center>
@@ -55,7 +53,7 @@
       <label for="name_id" class="formlabel">Name</label>
       <input name="name" id="name_id" type="text"> <br>
       <label for="price_id" class="formlabel">Price</label>
-      <input name="price" id="price_id" type="  "> <br>
+      <input name="price" id="price_id" type="text"> <br>
       <label for="brand_id" class="formlabel">Brand</label>
       <select name="brand" id="brand_id">
         <option value="Kawasaki">Kawasaki</option>
