--- a/week12lab/task5.html
+++ b/week12lab/task5.html
@@ -20,23 +20,43 @@
 </style>
 <script  src="https://code.jquery.com/jquery-3.5.1.min.js" integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
 <link href='https://fonts.googleapis.com/css?family=Comfortaa' rel='stylesheet'>
-<script type="text/javascript">jQuery(document).ready(function($) {
-    $("input").on({
-      focusin:function() {
-      /* Act on the event */
+<script type="text/javascript">$(document).ready(function() {
+  $("tr:not(:first):even").on({
+    mouseenter: function(){
       $(this).css({
-    "background-color": "lightsteelblue",
-      })
+        "background-color": "lightgray",
+        "color":"red",
+       // "font-weight" : "bold"
+      });
     },
-      focusout:function() {
-        /* Act on the event */
-        $(this).css({
-    "background-color": "white",
+    mouseleave: function(){
+      $(this).css({
+        "all":"revert"
       })
-      }
-    });
-});
-</script>
+    }
+  });
+  $("tr:not(:first):odd").on({
+    mouseenter: function(){
+      $(this).css({
+        "background-color": "yellow",
+        "border":"solid white 3px"
+      });
+    },
+    mouseleave: function(){
+      $(this).css({
+        "all":"revert"
+      })
+    }
+  });
+});</script>
+<style type="text/css">
+  tr {
+#    background-color: white;
+ #   border: solid black 3px;
+  #  color: salmon;
+   # font-weight: bold;
+  }
+</style>
 </head>
 <body>
   <center>
@@ -55,7 +75,7 @@
       <label for="name_id" class="formlabel">Name</label>
       <input name="name" id="name_id" type="text"> <br>
       <label for="price_id" class="formlabel">Price</label>
-      <input name="price" id="price_id" type="  "> <br>
+      <input name="price" id="price_id" type="text"> <br>
       <label for="brand_id" class="formlabel">Brand</label>
       <select name="brand" id="brand_id">
         <option value="Kawasaki">Kawasaki</option>
