change profit photo

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 <!-- header -->
 <div id="me" class="container-fluid bg-success text-center">
   <h2 class="margin">TP2543 Week Labs</h2>
-  <img src="img/rain.jpg" width="224" height="224" class="img-responsive img-circle margin" style="display:inline">
+  <img src="img/profit.jpg" width="125" height="200" class="img-responsive img-circle margin" style="display:inline">
   <h3>A197547 - Yuntian Wu</h3>
 </div>
 <!-- 
@@ -244,6 +244,20 @@
           </a>
         </div>
       </div>
+     <!-- Assignment#10-->
+    <div id="week12" class="row">
+      <div class="col-md-6 col-md-offset-3">
+        <h3>week12</h3>
+        <p>Jquery</p>
+        <ol>
+            <li>simplify javascript intergation</li>
+            <li>add more visual effect</li>
+        </ol>
+        <a href="week12lab" class="btn btn-default">
+          <span class="glyphicon glyphicon-zoom-in"></span> View
+        </a>
+      </div>
+    </div>
 
 </div>
 
