--- a/week12lab/task6.html
+++ b/week12lab/task6.html
@@ -23,8 +23,8 @@
 <script type="text/javascript">jQuery(document).ready(function($) {
     $("div#logo").click(function() {
       $(this).animate({
-        width:"25%",
-        height:"25%",
+        width:"120",
+        height:"30%",
       },2000,"linear").animate({
         left:"0",
         top:"0",
