--- a/index.html
+++ b/index.html
@@ -226,7 +226,7 @@
       </div>
       <div class="col">
         <h3>PT3</h3>
-        <a href="myPT1/index.php" class="btn btn-default">
+        <a href="PT3/index.php" class="btn btn-default">
           <span class="glyphicon glyphicon-zoom-in"></span> View
         </a>
       </div>
